# embed-cluster

./: .gitignore  README.md  pyproject.toml  requirements-webapp.txt  requirements.txt
docs/: BUILD_PLAN.md  IMPLEMENTATION_BRIEF.md  PROGRESS.md  VALIDATION_WEBAPP_AGENT_PROMPT.md  VALIDATION_WEBAPP_PLAN.md  VALIDATION_WEBAPP_PROGRESS.md
scripts/: run_dedupe.py  run_dedupe_remove.py  run_hdbscan.py  run_kmeans.py  run_leiden.py  run_webapp.sh  validate_inputs.py
src/embedcluster/: cli.py  config.py  dedupe.py  dedupe_remove.py  export.py  gpu.py  io.py  logging_utils.py  metrics.py  preprocessing.py  validation.py
src/embedcluster/graph/: leiden.py  mutual_knn.py
src/embedcluster/neighbors/: cuvs_knn.py
src/embedcluster/pipelines/: hdbscan_pipeline.py  kmeans_pipeline.py  leiden_pipeline.py
src/embedcluster/webapp/: app.py  audio_sampler.py  jobs.py  metadata_loader.py  metrics_view.py  run_loader.py
src/embedcluster/webapp/app_pages/: cluster_page.py  dedupe_page.py
src/embedcluster/webapp/components/: audio_panel.py  cluster_groups_panel.py  cluster_panel.py  cluster_table.py  dedupe_launcher.py  dedupe_remove_launcher.py  dup_group_panel.py  sidebar.py  similarity_panel.py
tests/: conftest.py  test_preprocessing.py  test_small_hdbscan.py  test_small_kmeans.py  test_small_leiden.py  test_validation.py
